# rainflow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/rainflow-cli/: Cargo.toml
crates/rainflow-cli/examples/: route_itata.rs
crates/rainflow-cli/src/: forcing.rs  main.rs
crates/rainflow-core/: Cargo.toml
crates/rainflow-core/benches/: calibration.rs  models.rs
crates/rainflow-core/examples/: gradient_calibration.rs
crates/rainflow-core/src/: calibrate.rs  error.rs  gr4j.rs  hbv.rs  lib.rs  metrics.rs  routing.rs  uh.rs
crates/rainflow-core/tests/: airgr_parity.rs
crates/rainflow-core/tests/fixtures/: airgr_gr4j_l0123001.csv
crates/rainflow-python/: Cargo.toml  pyproject.toml
crates/rainflow-python/src/: lib.rs
data/: example.csv
data/camels-cl/: 4511002.csv  4511002_hypsometry.csv  4703002.csv  4703002_hypsometry.csv  7330001.csv  README.md
data/camels-cl/itata/: balsa_outlet.csv  cholguan.csv  incremental.csv
scripts/: hypsometry_from_dem.py
