[workspace]
resolver = "3"
members = ["crates/rainflow-core", "crates/rainflow-cli", "crates/rainflow-python"]
# The Python crate links libpython, so keep it out of bare `cargo build`/`test`
# (build it with maturin). `cargo test`/`clippy` without --workspace stay clean.
default-members = ["crates/rainflow-core", "crates/rainflow-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Francisco Parra-O."]
repository = "https://github.com/franciscoparrao/rainflow"

[workspace.dependencies]
num-traits = "0.2"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"

[profile.release]
lto = true
codegen-units = 1
