[package]
name = "rainflow-core"
description = "Conceptual rainfall-runoff model cores (GR4J, HBV) with goodness-of-fit metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Forward-mode automatic differentiation: its scalar type implements
# num_traits::Float, so it flows through the generic model cores unchanged.
autodiff = "0.7"
criterion = "0.8"

[[bench]]
name = "models"
harness = false

[[bench]]
name = "calibration"
harness = false
