[package]
name = "rainflow-core"
description = "Conceptual rainfall-runoff model cores (GR4J, HBV) with goodness-of-fit metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
num-traits = { workspace = true }
thiserror = { workspace = true }
# Optimization substrate: DDS/SCE-UA (originally validated here against airGR)
# now live in forge, which rainflow consumes rather than re-implementing.
forge-core = { path = "../../../forge/forge-core" }
# Optional: derive Serialize/Deserialize on params and states so a nowcast can
# persist a model's state to disk and resume. Off by default (core stays light).
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
# Forward-mode automatic differentiation: its scalar type implements
# num_traits::Float, so it flows through the generic model cores unchanged.
autodiff = "0.7"
criterion = "0.8"
serde_json = "1"

[[bench]]
name = "models"
harness = false

[[bench]]
name = "calibration"
harness = false
